@@ -4,8 +4,6 @@ import com.digitalmicrofluidicbiochips.bachelorProject.executor.path_finding.ASt
 import com.digitalmicrofluidicbiochips.bachelorProject.executor.path_finding.IPathFinder;
 import com.digitalmicrofluidicbiochips.bachelorProject.model.actions.ActionBase;
 import com.digitalmicrofluidicbiochips.bachelorProject.model.actions.implementations.InputAction;
-import com.digitalmicrofluidicbiochips.bachelorProject.model.actions.implementations.MergeAction;
-import com.digitalmicrofluidicbiochips.bachelorProject.model.actions.implementations.SplitAction;
 import com.digitalmicrofluidicbiochips.bachelorProject.model.dmf_platform.*;
 import lombok.Getter;
 
@@ -14,7 +12,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Getter
 public class ProgramConfiguration {
@@ -28,11 +25,16 @@ public class ProgramConfiguration {
     public ProgramConfiguration(PlatformInformation platformInformation, List<ActionBase> programActions) {
         this.platformInformation = platformInformation;
         this.programActions = programActions;
-        this.droplets = getAllDropletsFromActions();
-        this.pathFinder = new AStar();
+        this.droplets = getAllDropletsProducedByActions();
+        this.pathFinder = new AStar(); //
         this.electrodeGrid = ElectrodeGridFactory.getElectrodeGrid(this);
     }
 
+    /**
+     * Used to get all the droplets that are currently on the DMF platform.
+     * Droplets that are not created yet or are already consumed are NOT included.
+     * @return Collection of droplets that are currently on the DMF platform.
+     */
     public Collection<Droplet> getDropletsOnDmfPlatform() {
         return droplets.stream()
                 .filter(droplet ->
@@ -41,46 +43,22 @@ public class ProgramConfiguration {
                 .collect(Collectors.toSet());
     }
 
-    private List<Droplet> getAllDropletsFromActions() {
-        Set<Droplet> droplets = new HashSet<>();
-
-        droplets.addAll(programActions.stream()
-                .filter(action -> action instanceof InputAction)
-                .map(action -> {
-                    InputAction inputAction = (InputAction) action;
-                    return inputAction.getDroplet();
-                })
-                .toList()
-        );
-
-        droplets.addAll(programActions.stream()
-                .filter(action -> action instanceof MergeAction)
-                .map(action -> {
-                    MergeAction mergeAction = (MergeAction) action;
-                    return mergeAction.getResultDroplet();
-                })
-                .toList()
-        );
-
-        droplets.addAll(programActions.stream()
-                .filter(action -> action instanceof SplitAction)
-                .flatMap(action -> {
-                    SplitAction splitAction = (SplitAction) action;
-                    return Set.of(splitAction.getResultDroplet1(), splitAction.getResultDroplet2()).stream();
-                })
-                .toList()
-        );
-
-        return droplets.stream().toList();
+    private List<Droplet> getAllDropletsProducedByActions() {
+        return programActions.stream()
+                .flatMap(action -> action.dropletsProducedByExecution().stream())
+                .distinct()
+                .collect(Collectors.toList());
     }
 
+    /**
+     * Used to get all the droplets that are initially placed on the DMF platform.
+     * This is used by the platform json generator, to generate the initial droplets in the json file.
+     * @return List of droplets that are initially placed on the DMF platform.
+     */
     public List<Droplet> getDropletsFromInputActions() {
         return programActions.stream()
                 .filter(action -> action instanceof InputAction)
-                .map(action -> {
-                    InputAction inputAction = (InputAction) action;
-                    return inputAction.getDroplet();
-                })
+                .flatMap(action -> action.dropletsProducedByExecution().stream())
                 .distinct()
                 .collect(Collectors.toList());
     }
